# pymed-iplweb

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
pymed/: __init__.py
tests/: test_article.py
tests/testdata/: test1.xml
