[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymed-iplweb"
version = "0.8.10"
description = "Python library for access to PubMed"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
keywords = ["PubMed", "PMC"]
authors = [{name = "Gijs Wobben", email = "gijswobben@gmail.com"}]
maintainers = [{name = "Michał Pasternak", email = "michal.dtz@gmail.com"}]
classifiers = [
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["requests>=2.20.0"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/mpasternak/pymed-iplweb"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 10
